📝 update api docs login
